--- a/app/ui/dashboard/navbar/navbar.module.css
+++ b/app/ui/dashboard/navbar/navbar.module.css
@@ -2,7 +2,7 @@
     padding: 20px;
     display: flex;
     align-items: center;
-    margin: 10px;
+    margin: 10px 0px;
     background-color: var(--bgSoft);
     border-radius: 10px;
     justify-content: space-between;
