--- a/app/ui/dashboard/products/singleproduct/singleproduct.module.css
+++ b/app/ui/dashboard/products/singleproduct/singleproduct.module.css
@@ -2,22 +2,9 @@
     display: flex;
     gap: 50px;
 }
-.infoContainer{
-    flex: 1;
-    background-color: var(--bgSoft);
-    padding: 20px;
-    border-radius: 10px;
-    height: max-content;
-}
-.imgContainer{
-    width: 100%;
-    height: 300px;
-    position: relative;
-    border-radius: 10px;
-    overflow: hidden;
-}
+
 .formContainer{
-    flex: 3;
+    width: 700px;
     padding: 20px ;
     background-color: var(--bgSoft);
 }
