--- a/app/ui/dashboard/singleuser/singleuser.module.css
+++ b/app/ui/dashboard/singleuser/singleuser.module.css
@@ -2,28 +2,17 @@
     display: flex;
     gap: 50px;
 }
-.infoContainer{
-    flex: 1;
-    background-color: var(--bgSoft);
-    padding: 20px;
-    border-radius: 10px;
-    height: max-content;
-}
-.imgContainer{
-    width: 100%;
-    height: 300px;
-    position: relative;
-    border-radius: 10px;
-    overflow: hidden;
-}
+
+
 .formContainer{
-    flex: 3;
+    width: 700px;
     padding: 20px ;
     background-color: var(--bgSoft);
 }
 .form{
     display: flex;
     flex-direction: column;
+    flex: 1;
 }
 
 .form input, .form select, .form textarea{
