--- a/app/ui/dashboard/products/singleproduct/singleproduct.module.css
+++ b/app/ui/dashboard/products/singleproduct/singleproduct.module.css
@@ -13,7 +13,7 @@
     flex-direction: column;
 }
 
-.form input, .form select, .form textarea{
+.form input, .form select, .form textarea ,.div{
     padding: 20px;
     border: none;
     outline: none;
@@ -21,6 +21,10 @@
     background-color: var(--bg);
     color: var(--text);
     margin: 10px 0px;
+}
+.div{
+    font-size: 12px;
+    color: var(--textSoft);
 }
 .form label{
     font-size: 12px;
